--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
         <div class="main__wrap">
             <article class="card">
                 <div class="card__wrap">
-                    <img src="./img/1.png"
-                         alt="lol">
+                    <picture>
+                        <source srcset="./img/1.png 1x, ./img/1-2.png 2x" type="image/png">
+                        <source srcset="./img/1.webp 1x, ./img/1-2.webp 2x" type="image/webp">
+                        <img src="./img/1.png"
+                        alt="lol">
+                    </picture>
                 </div>
                 <span>LIFESTYLE</span>
                 <h2 class="card__title">More than just a music festival</h2>
@@ -40,8 +44,12 @@
             </article>
             <article class="card">
                 <div class="card__wrap">
+                    <picture>
+                        <source srcset="./img/2.png 1x, ./img/2-2.png 2x" type="image/png">
+                        <source srcset="./img/2.webp 1x, ./img/2-2.webp 2x" type="image/webp">
                     <img src="./img/2.png"
                          alt="lol">
+                    </picture>
                 </div>
                 <span>LIFESTYLE</span>
                 <h2 class="card__title">Life tastes better with coffee</h2>
@@ -50,8 +58,12 @@
             </article>
             <article class="card">
                 <div class="card__wrap">
+                    <picture>
+                        <source srcset="./img/3.png 1x, ./img/3-2.png 2x" type="image/png">
+                        <source srcset="./img/3webp 1x, ./img/3-2.webp 2x" type="image/webp">
                     <img src="./img/3.png"
                          alt="lol">
+                         </picture>
                 </div>
                 <span>PHOTODAIRY</span>
                 <h2 class="card__title">American dream</h2>
@@ -60,8 +72,12 @@
             </article>
             <article class="card">
                 <div class="card__wrap">
+                    <picture>
+                        <source srcset="./img/4.png 1x, ./img/4-2.png 2x" type="image/png">
+                        <source srcset="./img/4.webp 1x, ./img/4-2.webp 2x" type="image/webp">
                     <img src="./img/4.png"
                          alt="lol">
+                         </picture>
                 </div>
                 <span>PHOTODAIRY</span>
                 <h2 class="card__title">A day exploring the Alps</h2>
@@ -70,8 +86,12 @@
             </article>
             <article class="card">
                 <div class="card__wrap">
+                    <picture>
+                        <source srcset="./img/5.png 1x, ./img/5-2.png 2x" type="image/png">
+                        <source srcset="./img/5.webp 1x, ./img/5-2.webp 2x" type="image/webp">
                     <img src="./img/5.png"
                          alt="lol">
+                         </picture>
                 </div>
                 <span>LIFESTYLE</span>
                 <h2 class="card__title">Top 10 song for running</h2>
@@ -80,8 +100,12 @@
             </article>
             <article class="card">
                 <div class="card__wrap">
+                    <picture>
+                        <source srcset="./img/6.png 1x, ./img/6-2.png 2x" type="image/png">
+                        <source srcset="./img/6.webp 1x, ./img/6-2.webp 2x" type="image/webp">
                     <img src="./img/6.png"
                          alt="lol">
+                         </picture>
                 </div>
                 <span>LIFESTYLE</span>
                 <h2 class="card__title">Cold winter days</h2>
